<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:javadron="http://code.google.com/p/javadrone">

<PreferenceCategory android:title="@string/ardrone_configuration">
	<com.codeminders.ardrone.preferences.SeekBarPreference
	                android:key="pref_altitude_max"
	                android:title="@string/max_altitude"
	                android:summary="@string/max_altitude_desc"
	                android:defaultValue="1.5"
	                android:max="1"
	                android:persistent="true"
	                javadron:max="10.0"
	                javadron:min="0.0"
	                javadron:interval="0.05"
	                javadron:unitsLeft=""
	                javadron:unitsRight="m"/>
	<com.codeminders.ardrone.preferences.SeekBarPreference
	                android:key="pref_angle_max"
	                android:title="@string/max_angle"
	                android:summary="@string/max_angle_desc"
	                android:defaultValue="6"
	                android:max="1"
	                android:persistent="true"
	                javadron:max="57.0"
	                javadron:min="0.0"
	                javadron:interval="0.06"
	                javadron:unitsLeft=""
	                javadron:unitsRight="°"/>
	<com.codeminders.ardrone.preferences.SeekBarPreference
	                android:key="pref_vertical_speed_max"
	                android:title="@string/vertical_speed"
	                android:summary="@string/vertical_speed_desc"
	                android:defaultValue="1"
	                android:max="1"
	                android:persistent="true"
	                javadron:max="3.0"
	                javadron:min="0.0"
	                javadron:interval="0.03"
	                javadron:unitsLeft=""
	                javadron:unitsRight="m/s"/>
	<com.codeminders.ardrone.preferences.SeekBarPreference
	                android:key="pref_rotation_speed_max"
	                android:title="@string/rotation_speed"
	                android:summary="@string/rotation_speed_desc"
	                android:defaultValue="50"
	                android:max="1"
	                android:persistent="true"
	                javadron:max="350.0"
	                javadron:min="40.0"
	                javadron:interval="1"
	                javadron:unitsLeft=""
	                javadron:unitsRight="°/s"
	                javadron:roundValue="true"/>
</PreferenceCategory>
<PreferenceCategory android:title="@string/controller_configuration">
	<com.codeminders.ardrone.preferences.SeekBarPreference
	                android:key="pref_controller_deadzone"
	                android:title="@string/controller_deadzone"
	                android:summary="@string/controller_deadzone_desc"
	                android:defaultValue="30"
	                android:max="1"
	                android:persistent="true"
	                javadron:max="100.0"
	                javadron:min="0.0"
	                javadron:interval="5"
	                javadron:unitsLeft=""
	                javadron:unitsRight="%"
	                javadron:roundValue="true"/>
</PreferenceCategory>
<PreferenceCategory android:title="@string/application_configuration">
      <CheckBoxPreference
                    android:key="pref_autoconnect_ardrone"
                    android:title="@string/autoconnect_ardrone"
                    android:summary="@string/autoconnect_ardrone_desc"
                    android:defaultValue="false" />
      <CheckBoxPreference
                    android:key="pref_autoconnect_ps3"
                    android:title="@string/autoconnect_ps3"
                    android:summary="@string/autoconnect_ps3_desc"
                    android:defaultValue="false" />
</PreferenceCategory>
    
</PreferenceScreen>